# ml-model-checker-2

./: .gitignore  README.md  pyproject.toml  requirements.txt  util_python_ensure_init.sh  util_python_format.sh
model_checker/analysis/: __init__.py
model_checker/analysis/posterior/: __init__.py  bootstrap.py  posterior.py
model_checker/model/blr/: __init__.py  bayesian_linear_regression.py
model_checker/model/bnn/: __init__.py  bayesian_layer.py  bayesian_network.py  dataset.py  main.py  predict.py  prediction.py  training.py
model_checker/prototype_pipeline/: __init__.py  dirichlet.py  distribution.py  main.py  noise.py  pipeline.py  visualization.py
model_checker/umli/: __init__.py
model_checker/umli/config/: __init__.py  loaders.py  schema.py
model_checker/umli/model/: __init__.py  unified_model.py
model_checker/umli/model/adapters/: __init__.py  custom_adapter.py  hf_adapter.py  jax_adapter.py  pytorch_adapter.py  sklearn_adapter.py  tensorflow_adapter.py  xgb_adapter.py
model_checker/umli/training/: __init__.py  callbacks.py  trainer.py
model_checker/umli/utils/: __init__.py  device.py  serialization.py  type_conversions.py
