[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-checker"
version = "0.1.0"
description = "Model Implausibility Testing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Model Checker Team"},
]
keywords = ["bayesian", "linear-regression", "uncertainty", "model-validation", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
pytorch = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
tensorflow = [
    "tensorflow>=2.6.0",
]
jax = [
    "jax>=0.3.0",
    "jaxlib>=0.3.0",
]
huggingface = [
    "transformers>=4.10.0",
    "datasets>=2.0.0",
]
xgboost = [
    "xgboost>=1.5.0",
]
sklearn = [
    "scikit-learn>=1.0.0",
]
pandas = [
    "pandas>=1.3.0",
]
all = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "anyio==4.11.0",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "dill==0.4.0",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h5py==3.15.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jax==0.8.1",
    "jaxlib==0.8.1",
    "Jinja2==3.1.6",
    "joblib==1.5.2",
    "keras==3.12.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "Markdown==3.10",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.7",
    "mdurl==0.1.2",
    "ml_dtypes==0.5.4",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "namex==0.1.0",
    "networkx==3.5",
    "numpy==2.3.5",
    "opt_einsum==3.4.0",
    "optree==0.18.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "propcache==0.4.1",
    "protobuf==6.33.1",
    "pyarrow==22.0.0",
    "Pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "regex==2025.11.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.1",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "Werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==2.0.1",
    "xgboost==3.1.1",
    "xxhash==3.6.0",
    "yarl==1.22.0"
]

[project.scripts]
model-checker = "model_checker.entry.cli:main"

[project.urls]
Homepage = "https://github.com/bashsudo/ml-model-checker"
Repository = "https://github.com/bashsudo/ml-model-checker"
Documentation = "https://github.com/bashsudo/ml-model-checker"
"Bug Tracker" = "https://github.com/bashsudo/ml-model-checker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["model_checker*", "umli*"]

[tool.setuptools.package-data]
model_checker = ["*.txt", "*.md"]
